# urirun-uinput

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  goal.yaml  pyproject.toml
.github/workflows/: release.yml
src/urirun_uinput.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_uinput.py
