[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-uinput"
version = "0.1.0"
description = "Linux uinput keyboard/mouse input surface primitive for urirun — synthesize key/click/move events via /dev/uinput ioctls. Pure stdlib, no urirun dependency."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
